fix: move build-container overflow to animation x-clip

--- a/src/scss/_main.scss
+++ b/src/scss/_main.scss
@@ -332,6 +332,8 @@ details.build-toggle {
   min-width: 100%;
   padding: 0;
 
+  z-index: 9999;
+
   font-size: 80%;
 
   list-style: none;
@@ -421,7 +423,6 @@ details.build-toggle {
 .build-container {
   width: 100%;
   margin: 12px 0;
-  overflow: hidden;
 }
 
 .build-preview-error {
@@ -602,6 +603,11 @@ details.build-toggle {
   position: absolute;
 
   width: 100%;
+  height: 100%;
+  
+  overflow-x: clip;
+
+  pointer-events: none;
 }
 
 .-running-start {
